--- a/_layouts/bib.liquid
+++ b/_layouts/bib.liquid
@@ -2,7 +2,7 @@
 ---
 <div class="row">
   {% if site.enable_publication_thumbnails %}
-    <div class="col-sm-2 {% if entry.preview %}preview{% else %}abbr{% endif %}">
+    <div class="col-sm-2 {% if entry.preview %}preview{% endif %}{% if entry.abbr %}abbr{% endif %}">
       {% if entry.preview %}
         {% if entry.preview contains '://' %}
           <img class="preview z-depth-1 rounded" src="{{ entry.preview }}">
@@ -17,7 +17,7 @@
             alt=entry.preview
           %}
         {% endif %}
-      {% elsif entry.abbr %}
+      {% if entry.abbr %}
         {% if site.data.venues[entry.abbr] %}
           {% assign venue_style = null %}
           {% if site.data.venues[entry.abbr].color != blank %}
