--- a/_layouts/bib.liquid
+++ b/_layouts/bib.liquid
@@ -17,6 +17,7 @@
             alt=entry.preview
           %}
         {% endif %}
+      {% endif %}
       {% if entry.abbr %}
         {% if site.data.venues[entry.abbr] %}
           {% assign venue_style = null %}
@@ -75,18 +76,18 @@
         {% endif %}
         {% if author_is_self %}
           <em>
-            {{- author.first }}
-            {{ author.last -}}
+            {{-author.first}}
+            {{author.last-}}
           </em>
         {% else %}
           {% if coauthor_url %}
             <a href="{{coauthor_url}}">
-              {{- author.first }}
-              {{ author.last -}}
+              {{-author.first}}
+              {{author.last-}}
             </a>
           {% else %}
-            {{ author.first }}
-            {{ author.last }}
+            {{author.first}}
+            {{author.last}}
           {% endif %}
         {% endif %}
       {% endfor %}
