--- a/_layouts/bib.html
+++ b/_layouts/bib.html
@@ -5,15 +5,23 @@
         <div class="col-sm-2">
           {%- if entry.abbr -%}
           <div class="abbr">
-              {%- if site.data.venues[entry.abbr] -%}
-              {%- assign venue_style = nil -%}
-              {%- if site.data.venues[entry.abbr].color != blank -%}
-              {%- assign venue_style = site.data.venues[entry.abbr].color | prepend: 'style="background-color:' | append: '"' -%}
-              {%- endif -%}
-              <abbr class="badge" {% if venue_style %}{{venue_style}}{% endif %}><a href="{{site.data.venues[entry.abbr].url}}">{{entry.abbr}}</a></abbr>
-              {%- else -%}
-              <abbr class="badge {% if entry.red %}badge-danger{% elsif entry.green %}badge-success{% elsif entry.blue %}badge-primary{% elsif entry.yellow %}badge-warning{% elsif entry.cyan %}badge-info{% elsif entry.gray %}badge-secondary{% else %}badge{% endif %}">{{entry.abbr}}</abbr>
-              {%- endif -%} 
+            {% if site.data.venues[entry.abbr] %}
+            <abbr class="badge" ><a href="{{site.data.venues[entry.abbr].url}}" target="_blank">{{entry.abbr}}</a></abbr>
+            {% else %}
+              {% if entry.type == "phdthesis" %}
+              <abbr class="badge" style="background-color:#3949ab">{{entry.abbr}}</abbr>
+              {% endif %}
+              {% if entry.type == "inproceedings" %}
+              <abbr class="badge" style="background-color:#008970">{{entry.abbr}}</abbr>
+              {% endif %}
+              {% if entry.type == "article" %}
+                {% if entry.preprint %}
+                <abbr class="badge" style="background-color:#3949ab">{{entry.abbr}}</abbr>
+                {% else %}
+                <abbr class="badge" style="background-color:#f4511e">{{entry.abbr}}</abbr>
+                {% endif %}   
+              {% endif %}
+            {% endif %}
           </div>
           {%- endif -%}
           {%- if entry.preview -%}
@@ -22,7 +30,7 @@
               <img class="preview z-depth-1 rounded" src="{{ entry.preview }}">
               {%- else -%}
               {%- assign entry_path = entry.preview | prepend: '/assets/img/publication_preview/' -%}
-              {% include figure.liquid
+              {% include figure.html
               path=entry_path
               class="preview z-depth-1 rounded"
               alt=entry.preview -%}
