update award liquid

--- a/_layouts/bib.liquid
+++ b/_layouts/bib.liquid
@@ -139,6 +139,9 @@
         {%- if entry.year -%}
           {%- capture entryyear -%}{{ " " }}{{entry.year}}{%- endcapture -%}
         {%- endif -%}
+        {%- if entry.award -%}
+        <br><span style="color: #B71C1C"><b>{{entry.award}}</b></span>
+        {%- endif -%}
         {% assign entrytype_text = entrytype | strip_html | strip %}
         {%- capture periodical -%}{{ entrytype }}{%- if entrytype_text != "" and entryyear != "" -%}, {%- endif -%}{{ entrymonth }}{{ entryyear }}{%- endcapture -%}
         <div class="periodical">
