--- a/_layouts/bib.liquid
+++ b/_layouts/bib.liquid
@@ -147,8 +147,8 @@
         <div class="periodical">
           {{ entry.note | strip }}
         </div>
-         {%- if entry.award -%}
-        <br><span style="color: #B71C1C"><b>{{entry.award}}</b></span>
+        {%- if entry.award -%}
+        <span style="color: #B71C1C"><b>{{entry.award}}</b></span>
         {%- endif -%}
         
           <!-- Links/Buttons -->
